--- a/css/briandonahue.css
+++ b/css/briandonahue.css
@@ -39,6 +39,12 @@ header li {
 display: inline;
 list-style-type: none;
 margin: 0px 5px 0px 5px;
+float: right;
+}
+
+img{
+    -webkit-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 6px 1px , rgba(0, 0, 0, 0.4); 
 }
 
 
@@ -54,6 +60,7 @@ div#bio:after{
     background-image:url('../img/afterp.png');
     background-size: cover;
 }
+
 #tracks{
     background-image: url('../img/bg2.jpg');
     background-size: cover;
@@ -62,7 +69,7 @@ div#bio:after{
 }
 
 #photos{
-    background-image:url('../img/noise.png');
+    background-image:url(http://subtlepatterns.com/patterns/dark_mosaic.png);
     padding-bottom:40px;
     border-bottom: 20px solid;
 }
@@ -114,7 +121,7 @@ h1{
 }
 
 #bio h1{
-        margin: 80px 0px 100px 0px;
+        margin: 100px 0px 100px 0px;
         text-shadow: 0px 0px 14px rgba(0,0,0,0.3);
 }
 h2{
@@ -166,6 +173,7 @@ h3 a{
 p{
     color:white;
     text-align: justify;
+    font-size:1.15em;
 }
 
 label{
@@ -173,7 +181,13 @@ label{
 }
 
 
-header li a {
+.arrow{
+    font-size:30px;
+    color:white;
+}
+
+
+a {
     font-size:20px;
     color:white;
     line-height:35px;
